[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/images/star.png" type="Texture" id=1]
[ext_resource path="res://assets/images/light.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/bonus.wav" type="AudioStream" id=3]
[ext_resource path="res://src/scripts/Bonus.gd" type="Script" id=4]
[ext_resource path="res://assets/images/coin_particule.png" type="Texture" id=5]

[sub_resource type="ParticlesMaterial" id=11]
lifetime_randomness = 0.3
emission_shape = 1
emission_sphere_radius = 8.0
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = -10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 1.0
color = Color( 0.898039, 0.772549, 0.0823529, 1 )

[sub_resource type="ParticlesMaterial" id=10]
lifetime_randomness = 0.5
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=12]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Bonus" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 4 )

[node name="Tail" type="Particles2D" parent="."]
amount = 90
local_coords = false
process_material = SubResource( 11 )

[node name="Explosion" type="Particles2D" parent="."]
emitting = false
amount = 60
one_shot = true
explosiveness = 0.4
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 5 )

[node name="Timer" type="Timer" parent="Explosion"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 0
frames = SubResource( 8 )
playing = true

[node name="Detector" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 9 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 12 )
[connection signal="timeout" from="Explosion/Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
